WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
83253
[BlackBerry] Clear local storage won't take effect until browser exit and relaunch
https://bugs.webkit.org/show_bug.cgi?id=83253
Summary
[BlackBerry] Clear local storage won't take effect until browser exit and rel...
Jonathan Dong
Reported
2012-04-05 00:12:15 PDT
RIM PR: #146871 way to reproduce: 1. goto
http://html5demos.com/storage
, enter something both in session storage and local storage, then reload the page, you can see the session and local storage are there; 2. clear local storage; 3. refresh the page. expected behavior: session storage still there, local storage is empty; now: session storage and local storage are still there both. if you exit and relaunch the browser, the local storage is cleared. root cause: in WebPageClientImpl::clearLocalStorage(), we only deleted the storage database file on disk, but we haven't cleared the local storage in memory.
Attachments
Patch
(5.54 KB, patch)
2012-04-05 00:37 PDT
,
Jonathan Dong
no flags
Details
Formatted Diff
Diff
Patch
(5.37 KB, patch)
2012-04-05 01:26 PDT
,
Jonathan Dong
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Jonathan Dong
Comment 1
2012-04-05 00:37:34 PDT
Created
attachment 135769
[details]
Patch
Jonathan Dong
Comment 2
2012-04-05 01:26:11 PDT
Created
attachment 135780
[details]
Patch
Charles Wei
Comment 3
2012-04-05 02:53:17 PDT
Comment on
attachment 135780
[details]
Patch Looks good to me. Need a reviewer to review and approve though.
Rob Buis
Comment 4
2012-04-05 03:44:21 PDT
Comment on
attachment 135780
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=135780&action=review
Looks good.
> Source/WebKit/blackberry/Api/BlackBerryGlobal.cpp:139 > void clearDatabase(const WebString& pageGroupName)
I wonder if clearDatabase is still in use...
WebKit Review Bot
Comment 5
2012-04-05 03:53:03 PDT
Comment on
attachment 135780
[details]
Patch Clearing flags on attachment: 135780 Committed
r113309
: <
http://trac.webkit.org/changeset/113309
>
WebKit Review Bot
Comment 6
2012-04-05 03:53:08 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug