[BlackBerry] Clear local storage won't take effect until browser exit and relaunch https://bugs.webkit.org/show_bug.cgi?id=83253

Patch by Jonathan Dong <jonathan.dong@torchmobile.com.cn> on 2012-04-05
Reviewed by Rob Buis.

.:

RIM PR: #146871
Added a manual test case to test the behavior when press
button "Clear Local Storage" from browser settings.
It has to be a manual test as it requires user interaction.

* ManualTests/blackberry/clear-localstorage.html: Added.

Source/WebKit/blackberry:

RIM PR: #146871
Cleared the local storage namespace of a WebPage's PageGroup
when WebPage::clearLocalStorage() get called.
Also deleted unused global function clearLocalStorage().

* Api/BlackBerryGlobal.cpp:
* Api/BlackBerryGlobal.h:
(WebKit):
* Api/WebPage.cpp:
(BlackBerry::WebKit::WebPage::clearLocalStorage):

Canonical link: https://commits.webkit.org/100645@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@113309 268f45cc-cd09-0410-ab3c-d52691b4dbfc